Fix T40223: Setting bevel_factor_mapping_start/end crashes

Patch from Lukas Treyer